# agentic-data-cloud-demo

./: .gitignore  README.md  README_ko.md  hands_on_guide.md  setup.sh
analytics/: README.md  README_ko.md  pyproject.toml
analytics/notebooks/: 01_data_profile_quality.ipynb  02_data_insight.ipynb  02_metadata_effectiveness.ipynb  03_dataset_insights.ipynb  03_schema_descriptions.ipynb  04_dataset_insights.ipynb  04_glossary_setup.ipynb  05_glossary_setup.ipynb  05_graph_analysis.ipynb  06_bigquery_ai_ml_demo.ipynb  06_graph_analysis.ipynb  07_bigquery_ai_functions.ipynb  07_glossary_graph_setup.ipynb  08_bigquery_ai_ml_demo.ipynb  09_bigquery_ai_functions.ipynb
analytics/notebooks/deprecated/: metadata_effectiveness.ipynb
analytics/resources/: agent_test_queries.md  aspect_graph_mapping.json  aspect_sql_mapping.json  aspect_term_governance.json  business_glossary.json  business_glossary_graph.json
terraform/: GEMINI.ko.md  GEMINI.md  README.ko.md  README.md
terraform/infra/: .terraform.lock.hcl  apis.tf  bigquery.tf  colab.tf  gcs.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
terraform/modules/api/: main.tf  variables.tf
terraform/modules/gcs/: main.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
