[project]
name = "analytics"
version = "0.1.0"
description = "Analytics Playground for Agentic Data Cloud Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bigframes>=2.43.0",
    "google-cloud-bigquery[pandas]>=3.42.0",
    "google-cloud-storage>=3.12.0",
    "pandas>=3.0.0",
    "pyarrow>=15.0.0",
    "geopandas>=1.0.0",
    "pyiceberg>=0.11.0",
    "db-dtypes>=1.7.0",
    "matplotlib>=3.8.0",
    "ipykernel>=6.0.0",
]
